# hephaestus

./: .envrc  .gitignore  .percentages  .rustfmt.toml  Cargo.toml  LICENSE  README.md  flake.nix  hephaestus.cabal  package.yaml  stack.yaml
src/: main.rs
src/hilcode/: mod.rs
src/hilcode/config/: app_config.rs  cli.rs  has_app_config.rs  mod.rs
src/hilcode/error/: hepheastus_error.rs  mod.rs
src/hilcode/io/: file_set.rs  file_set_glob.rs  mod.rs
src/hilcode/log/: has_logger.rs  level.rs  macros.rs  mod.rs
src/hilcode/test/: env.rs  utils.rs
src/main/haskell/: Main  Main.hs
src/main/haskell/Hilcode/: Clock.hs  FileSystem.hs  Glob.hs  Logger.hs  Misc.hs  Parser.hs  Prelude.hs  Result.hs
src/test/haskell/: Spec.hs
src/test/haskell/Hilcode/: Checks.hs  MiscSpec.hs  ParserSpec.hs
