[package]
name = "hephaestus"
version = "0.1.0"
edition = "2024"
description = "hephaestus"

[dependencies]
clap          = { version = "4.5.48", features = [ "derive" ]                               }
colored       = { version = "3.0.0"                                                         }
const_format  = { version = "0.2.34"                                                        }
globwalker    = { version = "0.9.0"                                                         }
memmap3       = { version = "0.1"                                                           }
tempfile      = { version = "3.23.0"                                                        }
time          = { version = "0.3.44", features = [ "formatting", "local-offset", "macros" ] }
xxhash-rust   = { version = "0.8.12", features = [ "xxh3" ]                                 }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }
